--- a/src/scss/project-abstracts/_colors.scss
+++ b/src/scss/project-abstracts/_colors.scss
@@ -1,41 +1,30 @@
 // PRIVATE GLOBAL TOKENS ============
 $-clr-black: hsl(0, 0%, 0%);
-$-clr-grey-500: hsl(0, 0%, 20%);
-$-clr-grey-400: hsl(0, 0%, 35%);// +- le grey-300 dans l'"exercice
+$-clr-grey-500: #292929;
+$-clr-grey-400: #616161;// +- le grey-300 dans l'"exercice
 $-clr-grey-300: hsl(0, 0%, 55%);// +- le grey-200 dans l'exercice
 $-clr-grey-200: hsl(0, 0%, 75%);
-$-clr-grey-100: hsl(0, 0%, 90%);// +-le grey-100 dans l'exercice
+$-clr-grey-100: #f5f5f5;// +-le grey-100 dans l'exercice
 $-clr-white: hsl(0, 0%, 100%);
 
-$-clr-blue-500: oklch(26.213% 0.07453 251.752);
-$-clr-blue-400: oklch(36.426% 0.11805 254.542);
-$-clr-blue-300: oklch(46.509% 0.15488 255.323);
-$-clr-blue-200: oklch(55.857% 0.1908 256.019);
-$-clr-blue-100: oklch(70.277% 0.16087 251.238);
+$-clr-blue-500: #2d288f;
+$-clr-blue-400: #484eb7;
+$-clr-blue-300: #565EF3;
+$-clr-blue-200: #797ff4;
+$-clr-blue-100: #bcbfef;
 
-$-clr-yellow-500: oklch(67.741% 0.14019 80.151);
-$-clr-yellow-400: oklch(82.533% 0.17051 79.939);
-$-clr-yellow-300: oklch(85.53% 0.15995 85.14);
-$-clr-yellow-200: oklch(88.862% 0.13267 87.883);
-$-clr-yellow-100: oklch(92.331% 0.092 88.384);
+$-clr-orange-100: #f6a877;
+$-clr-orange-200: #f97a2b;
+$-clr-orange-300: #EC5B00;
+$-clr-orange-400: #be4b03;
+$-clr-orange-500: #a0450c;
 
-$-clr-orange-500: oklch(49.896% 0.11976 57.708);
-$-clr-orange-400: oklch(73.411% 0.17938 56.099);
-$-clr-orange-300: oklch(78.016% 0.16329 63.186);
-$-clr-orange-200: oklch(87.922% 0.09219 69.815);
-$-clr-orange-100: oklch(93.546% 0.04861 71.123);
+$-clr-blue-violet-100: #b0a7f1;
+$-clr-blue-violet-200: #7b6de7;
+$-clr-blue-violet-300: #6858de;
+$-clr-blue-violet-400: #665CB4;
+$-clr-blue-violet-500: #4b4192;
 
-$-clr-red-500: oklch(41.688% 0.16169 28.04);
-$-clr-red-400: oklch(61.906% 0.24004 28.035);
-$-clr-red-300: oklch(63.638% 0.22079 26.155);
-$-clr-red-200: oklch(75.901% 0.14562 14.826);
-$-clr-red-100: oklch(89.393% 0.05737 7.426);
-
-$-clr-green-500: oklch(47.663% 0.13875 142.565);
-$-clr-green-400: oklch(76.523% 0.21358 142.952);
-$-clr-green-300: oklch(84.167% 0.17725 143.472);
-$-clr-green-200: oklch(88.342% 0.11574 144.218);
-$-clr-green-100: oklch(93.17% 0.06805 143.795);
 
 /** 
 PALETTE MAPS
@@ -60,42 +49,24 @@ $default-palette: (
   "400": $-clr-blue-400,
   "500": $-clr-blue-500,
   ),
+
   "secondary": (
-  "100": $-clr-yellow-100,
-  "200": $-clr-yellow-200,
-  "300": $-clr-yellow-300,
-  "400": $-clr-yellow-400,
-  "500": $-clr-yellow-500,
-  ),
-  "accent": (
   "100": $-clr-orange-100,
   "200": $-clr-orange-200,
   "300": $-clr-orange-300,
   "400": $-clr-orange-400,
   "500": $-clr-orange-500,
-  ),  
-  "success": (
-  "100": $-clr-green-100,
-  "200": $-clr-green-200,
-  "300": $-clr-green-300,
-  "400": $-clr-green-400,
-  "500": $-clr-green-500,
-  ),  
-  "error": (
-  "100": $-clr-red-100,
-  "200": $-clr-red-200,
-  "300": $-clr-red-300,
-  "400": $-clr-red-400,
-  "500": $-clr-red-500,
   ),
+
+  "accent": (
+  "100": $-clr-blue-violet-100,
+  "200": $-clr-blue-violet-200,
+  "300": $-clr-blue-violet-300,
+  "400": $-clr-blue-violet-400,
+  "500": $-clr-blue-violet-500,
+  )
 );
 
-/** 
-GENERIC CONTEXTUAL TOKENS
-CSS properties are created in base/_custom-properties.scss
-values change at theme selection (light/dark)
-!! must reflect the palette maps structure
-*/
 $color-neutral-white: var(--neutral-white);
 $color-neutral-100: var(--neutral-100);
 $color-neutral-200: var(--neutral-200);
@@ -121,15 +92,3 @@ $color-accent-200: var(--accent-200);
 $color-accent-300: var(--accent-300);
 $color-accent-400: var(--accent-400);
 $color-accent-500: var(--accent-500);
-
-$color-success-100: var(--success-100);
-$color-success-200: var(--success-200);
-$color-success-300: var(--success-300);
-$color-success-400: var(--success-400);
-$color-success-500: var(--success-500);
-
-$color-error-100: var(--error-100);
-$color-error-200: var(--error-200);
-$color-error-300: var(--error-300);
-$color-error-400: var(--error-400);
-$color-error-500: var(--error-500);
