--- a/src/scss/project-abstracts/_font-face.scss
+++ b/src/scss/project-abstracts/_font-face.scss
@@ -1,31 +1,17 @@
 @font-face {
-  font-family: "Inter";
+  font-family: "Geist";
   font-display: swap;
+  font-optical-sizing: auto;
   font-style: normal;
-  src: url("/fonts/inter/Inter-VariableFont_opsz-wght.woff2") format("woff2"),
-  url("/fonts/inter/Inter-VariableFont_opsz-wght.woff") format("woff")
+  src: url("/fonts/Geist-VariableFont_wght.woff2") format("woff2"),
+  url("/fonts/Geist-VariableFont_wght.woff") format("woff")
 }
 
 @font-face {
-  font-family: "Inter";
+  font-family: "Geist Mono";
   font-display: swap;
-  font-style: italic;
-  src: url("/fonts/inter/Inter-Italic-VariableFont_opsz-wght.woff2") format("woff2"),
-  url("/fonts/inter/Inter-Italic-VariableFont_opsz-wght.woff") format("woff")
-}
-
-@font-face {
-  font-family: "Epunda";
-  font-display: swap;
+  font-optical-sizing: auto;
   font-style: normal;
-  src: url("/fonts/epunda-slab/EpundaSlab-VariableFont_wght.woff2") format("woff2"),
-  url("/fonts/epunda-slab/EpundaSlab-VariableFont_wght.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Epunda";
-  font-display: swap;
-  font-style: italic;
-  src: url("/fonts/epunda-slab/EpundaSlab-Italic-VariableFont_wght.woff2") format("woff2"),
-  url("/fonts/epunda-slab/EpundaSlab-Italic-VariableFont_wght.woff") format("woff");
+  src: url("/fonts/GeistMono-VariableFont_wght.woff2") format("woff2"),
+  url("/fonts/GeistMono-VariableFont_wght.woff") format("woff")
 }
