--- a/src/scss/project-abstracts/_typography.scss
+++ b/src/scss/project-abstracts/_typography.scss
@@ -4,12 +4,12 @@
 // FONT Families ------------------- 
 
 // private
-$-ff-Inter: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$-ff-Epunda: "Epunda", Cambria, Georgia, Times, serif;
+$-ff-Geist: "Geist", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Open Sans', sans-serif;
+$-ff-GeistMono: "Geist Mono",'Courier New', Courier, monospace;
 
 // generic contextual token
-$font-family-base: $-ff-Inter;
-$font-family-accent: $-ff-Epunda;
+$font-family-base: $-ff-Geist;
+$font-family-accent: $-ff-GeistMono;
 
 
 // FONT SIZES ------------------- 
@@ -30,41 +30,34 @@ $font-family-accent: $-ff-Epunda;
 // 60   3.75 
 // 72   4.5
 
-//1st method : with clamp 
-// $font-sizes: (
-//    800: clamp( torem(28), .5rem + 5.3dvw, torem(60)),
-//    600: clamp( torem(16), .5rem + 2.4dvw, torem(27)),//le p sous le titre 2
-//    500: clamp( torem(14), .5rem + 1.8dvw, torem(21)),//tire secondaire
-//    400: clamp( 16px, .5rem + 1.6dvw, torem(18)),
-//    300: torem(16),
-// );
-
-// 2nd method : manually
+// TODO: define size for small screen
 $font-sizes: (
   "small": (
-    "200": torem(14),
-    "300": torem(14.8),
-    "400": torem(16),
+    "100": torem(14),
+    "200": torem(15),
+    "300": torem(16),
+    "400": torem(17),
     "500": torem(18),
-    "600": torem(18),
-    "700": torem(28),
-    "800": torem(36),
-    "900": torem(40),
+    "600": torem(19),
+    "700": torem(20),
+    "800": torem(42),
+    "900": torem(51),
   ),
   "large": (
-    "200": torem(14),
-    "300": torem(14.8),
-    "400": torem(16),
+    "100": torem(14),
+    "200": torem(15),
+    "300": torem(16),
+    "400": torem(17),
     "500": torem(18),
-    "600": torem(21),
-    "700": torem(28),
+    "600": torem(19),
+    "700": torem(20),
     "800": torem(42),
-    "900": torem(48),
+    "900": torem(51),
   ),
 );
 
 // generic contextual token
-// !! keep same structure as $font-sizes map
+$font-size-100: var(--fs-100);
 $font-size-200: var(--fs-200);
 $font-size-300: var(--fs-300);
 $font-size-400: var(--fs-400);
@@ -97,4 +90,7 @@ $font-weight-extra-bold: $-fw-800;
 $font-weight-black: $-fw-900;
 
 // LETTER SPACING ------------------- 
-$letter-spacing-wide: .02em;
+$letter-spacing-narrow: -2.4em;
+$letter-spacing-regular: .02em;
+$letter-spacing-large: .8em;
+$letter-spacing-wide: 1.3em;
