styling hero,navigation

--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -3,16 +3,16 @@
 // import navigationData from "../content/primary-navigation.json";
 // import LogoLink from "./navigation/LogoLink.astro";
 // import SocialLinks from "./navigation/SocialLinks.astro";
-// import PrimaryNavigation from "./navigation/PrimaryNavigation.astro";
+import PrimaryNavigation from "./PrimaryNavigation.astro";
 // import Button from "./Button.astro";
 // import BurgerButton from "./navigation/BurgerButton.astro";
 const { skipTo = "#main" } = Astro.props;
 
-//const primaryNavigationID = "header-primary-navigation";
+const primaryNavigationID = "header-primary-navigation";
 ---
 
 <header class="site-header" >
-  <a href={skipTo} class="skip-nav-link">Skip to content</a>
+  <!-- <a href={skipTo} class="skip-nav-link">Skip to content</a> -->
   <div class="container">
     <div class="site-header--inner">
       <!-- <LogoLink />
@@ -27,7 +27,8 @@ const { skipTo = "#main" } = Astro.props;
         <PrimaryNavigation id={primaryNavigationID} aria="primary navigation" {navigationData} />
         <SocialLinks elements="Instagram, X, Facebook"/>
         <Button class="subscribe | -primary">Subscribe to Newsletter</Button>
-      </div> -->   
+      </div> --> 
+              <PrimaryNavigation id={primaryNavigationID} aria="primary navigation" />
     </div>
   </div>
 </header>
