--- a/src/scss/mm-design-system/utilities/_index.scss
+++ b/src/scss/mm-design-system/utilities/_index.scss
@@ -9,6 +9,7 @@
 @forward 'font-families';
 @forward 'font-sizes';
 @forward 'font-weights';
+@forward 'font-letter-spacing';
 @forward 'full-size-image';
 @forward 'hidden';
 @forward 'misc.utilities';
