--- a/src/scss/project-abstracts/_contextual-tokens.scss
+++ b/src/scss/project-abstracts/_contextual-tokens.scss
@@ -53,11 +53,11 @@ $link-font-weight: $font-weight-regular;
 $title-font-family: $font-family-accent;
 $title-color-default: $color-neutral-500;
 $title-font-weight: $font-weight-bold;
-$title-letter-spacing: $letter-spacing-wide;
+$title-letter-spacing: $letter-spacing-regular;
 $title-line-height: 1.1;
 $title-text-transform: none;
 
-$title-1-font-size: $font-size-800;
+$title-1-font-size: $font-size-900;
 $title-1-color: $title-color-default;
 $title-1-font-weight: $font-weight-semi-bold;
 $title-2-font-size: $font-size-400;
@@ -81,7 +81,7 @@ $auto-grid-min: min(300px, 100%);
 $page-max-width: torem(1100);
 
 // HERO ---------------
-$hero-padding-block: $size-7 ;//clamp(15rem, 22dvh, torem(320));
+$hero-padding-block: $size-12 7rem;//clamp(15rem, 22dvh, torem(320));
 
 // SECTION ---------------
 $section-padding-block: $size-13;//clamp(1.7rem, 8dvh, torem(60));// responsive height
@@ -93,13 +93,13 @@ $container-max-width-default: torem(1024);/* required*/ //64rem
 $container-max-width-wide: torem(1200);/* optional */ //75rem 
 
 // HEADERS --------------- 
-$site-header-background-color: $color-neutral-100;
+$site-header-background-color: transparent;
 $site-header-color: $color-neutral-500;
-$site-header-padding: $size-7 0;
+$site-header-padding: 0 0;
 $site-header-margin: 0;
 
 $site-header-justify-small-screens: center;
-$site-header-justify-large-screens: space-between;
+$site-header-justify-large-screens: end;
 $site-header-media-query-large-screen-breakpoint: "medium";
 $site-header-align: center;
 
@@ -126,7 +126,7 @@ $navigation-gap: $size-5;
 $navigation-link-text-decoration: none;
 $navigation-font-family: $body-font-family;
 $navigation-font-weight: $body-font-weight;
-$navigation-letter-spacing: $letter-spacing-wide;
+$navigation-letter-spacing: $letter-spacing-regular;
 
 // skip navigation ---------------
 $skip-nav-color: $color-neutral-100;
