--- a/src/scss/project-abstracts/_typography.scss
+++ b/src/scss/project-abstracts/_typography.scss
@@ -91,6 +91,6 @@ $font-weight-black: $-fw-900;
 
 // LETTER SPACING ------------------- 
 $letter-spacing-narrow: -2.4em;
-$letter-spacing-regular: .02em;
+$letter-spacing-regular: -0.03em;
 $letter-spacing-large: .8em;
-$letter-spacing-wide: 1.3em;
+$letter-spacing-wide: 0em;
