--- a/src/scss/project-components/_index.scss
+++ b/src/scss/project-components/_index.scss
@@ -2,3 +2,6 @@
 collection of custom components for the project
 */
 @forward 'logo';
+@forward 'hero';
+@forward 'primary-navigation';
+@forward 'site-header';
