--- a/src/scss/project-components/_index.scss
+++ b/src/scss/project-components/_index.scss
@@ -5,3 +5,4 @@ collection of custom components for the project
 @forward 'hero';
 @forward 'primary-navigation';
 @forward 'site-header';
+@forward 'global-grid-layout';
