--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import ProjectList from "../components/ProjectList.astro";
 
 <Layout>
 	<Hero />
-	<SiteHeader />
-	<ProjectList />
+	<main id="main">
+		<ProjectList />
+	</main>
 </Layout>
