--- a/src/scss/mm-design-system/utilities/_font-sizes.scss
+++ b/src/scss/mm-design-system/utilities/_font-sizes.scss
@@ -13,6 +13,7 @@ $fontSizeMap : $font-sizes;
 @if isTwoDimensionalMap($font-sizes){
    $fontSizeMap: getElementByIndex($font-sizes, 1);
 }
+@debug $fontSizeMap;
 
 @each $size-name, $size-value in $fontSizeMap {
    .fs-#{$size-name} {
