--- a/src/scss/project-components/_index.scss
+++ b/src/scss/project-components/_index.scss
@@ -6,3 +6,5 @@ collection of custom components for the project
 @forward 'primary-navigation';
 @forward 'site-header';
 @forward 'global-grid-layout';
+@forward 'category-list';
+@forward 'project-preview';
