--- a/src/components/ProjectGroupList.astro
+++ b/src/components/ProjectGroupList.astro
@@ -33,122 +33,16 @@ const projectByCategory = Array.from(projectsByCategoryMap.values());
 ---
 <div>{
    projectByCategory.map( group => 
-      <section class="section">
+      <section class="section category-list">
          <div class="container">
             {/* Correction : Ajout des accolades pour l'interpolation de la variable */}
             <h2>{group.category}</h2>
-            <div class="grid-auto-fit mbs-14">
+            <div class="grid-auto-fit">
                {/* 'p' est maintenant correctement typé grâce à l'interface CategoryGroup */}
                { group.projects.map( p  =>  <ProjectPreview project={p} />)}
             </div>
          </div>
       </section>
-   )
+   ) 
 }
 </div>
-
-{/* ... Reste du code HTML statique ... */}
-
-
-
-<section class="section">
-   <div class="container">
-      <h2 class="title-2">[Category Title]</h2>
-      <div>[Project List Items]
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-      </div>     
-   </div> 
-</section>
-
-
-
-
-<section class="section">
-   <div class="container">
-      <h2 class="title-2">[Category Title]</h2>
-      <div>[Project List Items]
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-      </div>     
-   </div> 
-</section>
-
-
-
-<section class="section">
-   <div class="container">
-      <h2 class="title-2">[Category Title]</h2>
-      <div>[Project List Items]
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-
-          <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-
-         
-         <article>
-            <h3>[Project Title]</h3>
-            <div>[Project image]</div>
-            <p>[Project Description] Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, architecto totam fugiat voluptas assumenda dolorem, possimus incidunt </p>
-         </article>
-      </div>     
-   </div> 
-</section>
