--- a/src/scss/project-components/_category-list.scss
+++ b/src/scss/project-components/_category-list.scss
@@ -1,15 +1,20 @@
 @use "../mm-design-system/abstracts/" as *;
 
-.category-list{
+.category-section{
+   padding-block-end: 0;
    
    .container{
-      display: grid;
-      
+      display: grid;  
       gap: $size-11;
       grid-template-columns: 1fr;
       @include mq(medium){
          grid-template-columns: 13rem 1fr;
-      }
+   }
+
+   .project-list{
+      --grid-gap-h: #{$size-14};
+      --grid-gap-v: #{$size-6};
+   }
 
 
 
