--- a/src/scss/project-components/_category-list.scss
+++ b/src/scss/project-components/_category-list.scss
@@ -12,6 +12,7 @@
    }
 
    .project-list{
+      // recoit .grid-auto-fill
       --grid-gap-h: #{$size-14};
       --grid-gap-v: #{$size-6};
    }
