update hero content

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,8 +12,9 @@
             <h1 class="title-1 letter-spacing-regular">Hi, I'm Michel,<br> 
                <span class="clr-accent-400">Web Developer</span><br>
                in Brussels</h1>
-               <h2 class="title-2">Looking for full-time opportunities</h2>
-               <p>[TEXT : INTRODUCTION] But other than that, study of cross-platform practices should keep its influence over the permanent growth. The real reason of the critical thinking immediately the critical acclaim of the the potential role models. Therefore, the concept of the development methodology can be treated as the only solution.</p>  
+               <h2 class="title-2">15 ans d'expérience web, récemment certifié Fullstack JavaScript</h2>
+               <p class="fw-light">Développeur Frontend avec une sensibilité de graphiste, évoluandepuis l'époque Flash/XHTML jusqu'au CSS moderne. Avec une récente formation intensive en Fullstack JavaScript-React, je combine aujourd'hui une solide culture technique historique avec les standards actuels du développement.</p> 
+                  <h2 class="title-2">Actuellement à la recherche d'un poste en Frontend Fullstack à Bruxelles.</h2> 
             </div>
    
          </div>
