resume pdf and social links

--- a/src/components/PrimaryNavigation.astro
+++ b/src/components/PrimaryNavigation.astro
@@ -5,8 +5,8 @@ const { id, aria} = Astro.props;
 
 <nav {id} aria-labe={aria}>
    <ul class="nav primary-nav">
-   <li><a href="#">Download Resume</a></li>
-   <li><a href="#">Linkedin</a></li>
-   <li><a href="#">Github</a></li>
+   <li><a href="/files/michel-maes_cv_2025.6.11.pdf">curiculum vitae (pdf)</a></li>
+   <li><a href="https://www.linkedin.com/in/mic-maes">linkedin</a></li>
+   <li><a href="https://github.com/m1cm4/">github</a></li>
    </ul>
 </nav>
