--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,11 +7,11 @@
 <section class="section hero ">
    <div class="container -wide">
       <div class="even-columns vertically-centered">
-         <div class="hero--image">[SVG illustration]</div>
+         <div class="hero-image">
+            <img src="images/backgrounds/illustration.svg" aria-role="hide" alt="une panoplie de logotypes d'outils et de languages de programmation">
+         </div>
          <div class="hero--description flow">
-            <h1 class="title-1 letter-spacing-regular">Hi, I'm Michel,<br> 
-               <span class="clr-accent-400">Web Developer</span><br>
-               in Brussels</h1>
+            <h1 class="title-1 letter-spacing-regular">Michel MAES <span class="clr-accent-400">Développeur Web</span><br>Frontend & Créatif</h1>
                <h2 class="title-2">15 ans d'expérience web, récemment certifié Fullstack JavaScript</h2>
                <p class="fw-light">Développeur Frontend avec une sensibilité de graphiste, évoluandepuis l'époque Flash/XHTML jusqu'au CSS moderne. Avec une récente formation intensive en Fullstack JavaScript-React, je combine aujourd'hui une solide culture technique historique avec les standards actuels du développement.</p> 
                   <h2 class="title-2">Actuellement à la recherche d'un poste en Frontend Fullstack à Bruxelles.</h2> 
