--- a/src/scss/project-components/_site-header.scss
+++ b/src/scss/project-components/_site-header.scss
@@ -1,3 +1,4 @@
+@use "../mm-design-system/abstracts/" as *;
 
 .site-header{
   background: linear-gradient(135deg, #F0FAEE 60%, transparent);
@@ -6,6 +7,25 @@
   position: sticky;
    z-index: 1000;
    top: 0;
+
+   --background-opacity: 0;
+
+
+
+   .background-image{
+      display: none; 
+      opacity: var(--background-opacity);
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+      inset: 0;
+      *{
+        margin-top: -15%;
+      }
+      @include mq(medium){
+         display: block;
+      }
+   }
   
   @supports (animation-timeline: view()){
    animation: stickyn forwards;
@@ -13,14 +33,17 @@
    animation-range-start: 98vh;
    animation-range-end: 110vh;
   }
+
   @keyframes stickyn{
    from{
       transform: translateY(-6rem);
+      --background-opacity: 1;  
    }
    to{
       top: 0rem;
       background: rgba(233, 248, 231, 0.959);
       transform: translateY(0);
+      --background-opacity: 1;
    }
   }
 
