--- a/src/scss/project-components/_primary-navigation.scss
+++ b/src/scss/project-components/_primary-navigation.scss
@@ -53,15 +53,12 @@
       }
    }
    
-   font-size: .82rem;
-   gap: .7rem;
-   @include mq(small){
-      gap: $navigation-gap;
-      font-size: $font-size-300;
-   }
+   gap: $navigation-gap;
+   font-size: $font-size-400;
 
    @include mq(medium){
       font-size: $font-size-400;
+      gap: 2.4rem;
    }
 
 }
