--- a/src/scss/project-components/_primary-navigation.scss
+++ b/src/scss/project-components/_primary-navigation.scss
@@ -17,6 +17,7 @@
       align-items: center;
       align-self: center;
       gap: .4em;
+      min-width: 50px;
       height: 1.8em;
       padding: .26em .8em;
 
@@ -53,7 +54,7 @@
       }
    }
    
-   gap: $navigation-gap;
+   gap: .5rem;
    font-size: $font-size-400;
 
    @include mq(medium){
