reduce title font-size on small screen

--- a/src/scss/project-components/_hero.scss
+++ b/src/scss/project-components/_hero.scss
@@ -77,5 +77,10 @@
       line-height: 1.8rem;
       max-width: 44ch;
       margin-inline: auto;
+      text-align: center;
+
+      @include mq(medium){
+         text-align: left;
+      }
    }
 }
