--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 import BaseHead from "../components/BaseHead.astro";
 import Hero from "../components/Hero.astro";
 import SiteFooter from "../components/SiteFooter.astro";
@@ -12,5 +13,6 @@ const { class:classlist =  "", title = "Portfolio | Michel MAES"} = Astro.props;
     <SiteHeader />
       <slot />
     <SiteFooter />
+    <SpeedInsights />
   </body>
 </html>
